<resources>
    <string name="app_name">Nadgodzinki</string>
    <string name="settings">Settings</string>
    <string name="app_info">App Info</string>
    <string name="add">Add</string>
    <string name="add_delete_overtime">Add or subtract overtime</string>
    <string name="hours">Hour(s)</string>
    <string name="minutes">Minute(s)</string>
    <string name="zero">0</string>
    <string name="delete_overtime">Delete overtime</string>
    <string name="send_buckup">Send Buckup</string>
    <string name="statistics">Statistics</string>
    <string name="overtime_number">Number of available hours</string>
    <string name="zerozero">00</string>
    <string name="colon">:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="auto_buckup">Auto Buckup</string>
    <string name="buckup_options">Buckup options</string>
    <string name="buckup_frequency">Buckup Frequency</string>
    <string name="settings_buckup_switch_summary">Enable or disable Buckups</string>
    <string name="settings_buckup_email">Email address to buckups</string>
    <string name="buckup_email_address">Buckup email address</string>
    <string name="enter_your_buckup_email">Enter your email address</string>
    <string name="operation_saved">Changes saved</string>
    <string name="set_buckup_email">Set buckup email address</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="buckup_email_address_changed">Buckup email address changed</string>
    <string name="buckup_email_change_cancellation">Buckup email change was cancelled</string>
    <string name="email_address_not_changed">Email address not changed</string>
    <string name="incorrect_minutes_numbers">Incorrect minutes numbers</string>
    <string name="ok">Ok</string>
    <string name="incorrect_minutes">Incorrect minutes count</string>
    <string name="minutes_lower_60">Number of minutes must be &lt; 60</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="cannot_setup_future_date">You cannot set up future date</string>
    <string name="incorrect_overtime">Incorrect overtine</string>
    <string name="set_non_null_time">Set non null time.</string>
    <string name="operation_cancelled">Operation cancelled.</string>
    <string name="delete">Delete</string>
    <string name="notification_channel_name">Buckup request notifications</string>
    <string name="notification_channel_description">notification_channel_description</string>
    <string name="clear_database">Do you want clear database?</string>
    <string name="clear_database_desctription">Clearing database is indivertible. You lost all informations stored in app. If you want do so, please do buckup first.</string>
    <string name="clear_all">Clear all</string>
    <string name="clear">Clear</string>
    <string name="make_buckup">Make buck up</string>
    <string name="database_has_beeen_cleared">Database has been cleared.</string>
    <string name="read_buckup">Read in Buckup</string>
    <string name="error">Error!</string>
    <string name="error_external_storage">There is no acces to external storage location. Check if SD card is inserted.</string>
    <string name="error_file_does_not_exist">File does not exist. Please download Buckup file to Download folder.</string>
    <string name="selectBuckupFile">Select Buckup file.</string>
    <string name="cannot_parse_xml_file">Cannot parse xml file. Incorrect xml scheme.</string>
    <string name="buckup_notification_title">Buckup file creation request</string>
    <string name="buckup_notification_text">Save Buckup File on your mail or one of...</string>
    <string name="buckup_notification_text_big">Save Buckup File on your mail or one of cloud service like Google Drive, in order to be able to get back lost data.</string>
    <string name="choose_buckup_period">Choose Buckup period</string>
    <string name="choose_notification_day">Choose notification dayOfWeek</string>
    <string name="buckup_day">Day of Buckup</string>
    <string name="test">Test</string>
    <string name="recycle_view_expand_button_content_desctiption">Show note</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="Foo">Foo</string>
    <string name="delete_this_overtime">Delete this overtime</string>
    <string name="ask_about_note">Ask about note</string>
    <string name="add_note_question">Add a note?</string>
    <string name="no_add">No add</string>
    <string name="dont_show_this_dialog_again">Do not show this dialog again</string>
    <string name="set_new_date">Set new date</string>
    <string name="list_of_overtimes">List of Overtimes</string>
    <string name="save_note">Save Note</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="choose_search_criteria">Choose search criteria</string>
    <string name="clear_filters">Clear filters</string>
    <string name="replace_item">Replace item?</string>
    <string name="replace">Replace</string>
    <string name="replace_item_explenation">Item with selected date exists in Data Base currently. Would you like to replace prievious with current one?</string>
    <string name="nothing_to_change">Nothing to change. Date is the same.</string>
    <string name="search_in_notes">Search in notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="nav_header_title">Heder TITle</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="time_taken">Time taken:</string>
    <string name="time_done">Time done:</string>
    <string name="all">All</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="time_to_take">Time to take:</string>
    <string name="open_graph_in_new_activity">Open full screen graph</string>
    <string name="graph">Graph</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="select_where_to_save_buckup">Select where to save buck up file</string>
    <string name="request_permission_expalnation">To gain access to Download folder app user must grant system permission.</string>
    <string name="no_files_in_download_folder">There is no files in Download directory.</string>
    <string name="reading_buckup_file_permanently_disabled_explenation">This functionality is permanentaly disabled by you. It is not possible to get access to user directories.</string>
    <string name="which_app_choose">Which app choose to save BuckUp file.</string>
    <string name="show_app_chooser">Show app chooser</string>
    <string name="add_or_subtract">Add or subtract</string>
    <string name="overtimes">overtimes</string>
    <string name="incorrect_time">Incorrect Time</string>
    <string name="minutes_and_time_above_level">Number of hours is above 24 and minutes above 60.</string>
    <string name="incorrect_hours">Incorrect number of hours</string>
    <string name="hours_above_23">Number of hours should by below 24.</string>
    <string name="item_exists_in_db">Item with this date exists already!</string>
    <string name="change">Change</string>
    <string name="do_you_want_change_item">Do you want to change item?</string>
</resources>
