<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/buckup_options">

        <EditTextPreference
            android:dialogMessage="@string/enter_your_buckup_email"
            android:dialogTitle="@string/buckup_email_address"
            android:icon="@drawable/ic_email_24px"
            android:inputType="textEmailAddress"
            android:key="buckup_email"
            android:title="@string/settings_buckup_email"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:editable="true"
            android:icon="@drawable/ic_upload_24px"
            android:key="buckup_enabled"
            android:summary="@string/settings_buckup_switch_summary"
            android:title="@string/auto_buckup" />

        <ListPreference
            android:defaultValue="week"
            android:dependency="buckup_enabled"
            android:dialogTitle="@string/choose_buckup_period"
            android:entries="@array/buckup_period_list"
            android:entryValues="@array/buckup_list_values"
            android:icon="@drawable/ic_clock_24px"
            android:key="buckupList"
            android:title="@string/buckup_frequency"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="6"
            android:dependency="buckup_enabled"
            android:dialogTitle="@string/choose_notification_day"
            android:entries="@array/buckup_list_of_dayweeks"
            android:entryValues="@array/buckup_list_of_dayweeks_values"
            android:icon="@drawable/ic_round_calendar_today_24px"
            android:key="buckupDay"
            android:title="@string/buckup_day"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_round_apps_24px"
            android:key="askForAppChooser"
            android:title="@string/show_app_chooser" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Inne">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_note_24px"
            android:key="askAboutNote"
            android:title="@string/ask_about_note" />
    </PreferenceCategory>

</PreferenceScreen>