<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:id="@+id/mainMenuIntents">
        <item
            android:id="@+id/menuItemListOfOvertimes"
            android:icon="@drawable/ic_list_of_overtimes_24dp"
            android:title="@string/list_of_overtimes" />
        <item
            android:id="@+id/menuItemStatistics"
            android:icon="@drawable/ic_statistics_24dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/menuItemSettings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
    </group>

    <!-- android:id="@id/main_activity_menu_group_buckup" -->
    <group android:id="@+id/mainMenuBuckups">
        <item
            android:id="@+id/menuItemMakeBuckup"
            android:icon="@drawable/ic_upload_24px"
            android:title="@string/make_buckup" />
        <item
            android:id="@+id/menuItemReadBuckup"
            android:icon="@drawable/ic_download_24px"
            android:title="@string/read_buckup" />
    </group>

    <group android:id="@+id/mainMenuOthers">

    </group>

</menu>
