<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemSearchNote"
        android:title="@string/search_in_notes"
        android:icon="@drawable/ic_list_activity_search"
        android:windowSoftInputMode="stateAlwaysVisible"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.EditText"/>

    <item
        android:id="@+id/menuItemSaveBuckup"
        android:title="@string/send_buckup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuItemReadBuckup"
        android:title="@string/read_buckup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clearDatabase"
        android:title="@string/clear_all"
        app:showAsAction="never"/>

</menu>