<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemSearchNote"
        android:title="@string/search_in_notes"
        android:icon="@drawable/ic_list_activity_search"
        android:windowSoftInputMode="stateAlwaysVisible"

        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <!-- app:actionViewClass="android.widget.EditText" -->

    <item
        android:id="@+id/filterDatabase"
        android:title="@string/filter"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clearFilterCriteria"
        android:title="@string/clear_filters"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clearDatabase"
        android:title="@string/clear_all"
        app:showAsAction="never"/>

</menu>