<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainAddOvertimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_delete_overtime"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mainMinutesEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="addMainButtonClicked"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainDeleteButton"
        app:layout_constraintTop_toBottomOf="@+id/mainCalendar" />

    <TextView
        android:id="@+id/mainHoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hours"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainHoursEditText"
        app:layout_constraintEnd_toStartOf="@+id/mainHoursEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <CalendarView
        android:id="@+id/mainCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/mainAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHoursTextView" />

    <TextView
        android:id="@+id/mainMinutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/minutes"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainMinutesEditText"
        app:layout_constraintEnd_toStartOf="@+id/mainMinutesEditText" />

    <EditText
        android:id="@+id/mainMinutesEditText"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/mainCalendar"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/mainHoursEditText"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:maxLength="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainMinutesTextView"
        app:layout_constraintEnd_toStartOf="@+id/mainMinutesTextView" />

    <Button
        android:id="@+id/mainDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="deleteOvertime"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCalendar" />

</androidx.constraintlayout.widget.ConstraintLayout>