<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/delete_dialog_text_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/delete_hours"
            app:layout_constraintEnd_toStartOf="@+id/delete_hours"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/delete_dialog_text_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/delete_minutes"
            app:layout_constraintEnd_toStartOf="@+id/delete_minutes"
            app:layout_constraintStart_toEndOf="@+id/delete_hours" />

        <EditText
            android:id="@+id/delete_minutes"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete_dialog_text_minutes"
            app:layout_constraintTop_toBottomOf="@+id/deleteCalendarView" />

        <EditText
            android:id="@+id/delete_hours"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/delete_dialog_text_minutes"
            app:layout_constraintEnd_toStartOf="@+id/delete_dialog_text_minutes"
            app:layout_constraintStart_toEndOf="@+id/delete_dialog_text_hours" />

        <CalendarView
            android:id="@+id/deleteCalendarView"
            android:layout_width="314dp"
            android:layout_height="348dp"
            app:layout_constraintBottom_toTopOf="@+id/delete_hours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

