<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/spinnerColon"
        android:layout_width="10dp"
        android:layout_height="24dp"
        android:focusable="true"
        android:focusedByDefault="true"
        android:text="@string/colon"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinnerEditTextMinutes"
        app:layout_constraintEnd_toStartOf="@+id/spinnerEditTextMinutes"
        app:layout_constraintStart_toEndOf="@+id/spinnerEditTextHours" />

    <Spinner
        android:id="@+id/spinnerSortingDate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCuttingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCuttingDate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/searchFilterCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSortingDate" />

    <CalendarView
        android:id="@+id/searchFilterCalendar"
        android:layout_width="0dp"
        android:layout_height="301dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCuttingDate" />

    <Spinner
        android:id="@+id/spinnerOvertimeLength"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerEditTextHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFilterCalendar" />

    <EditText
        android:id="@+id/spinnerEditTextHours"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/zero"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerColon"
        app:layout_constraintStart_toEndOf="@+id/spinnerOvertimeLength"
        app:layout_constraintTop_toBottomOf="@+id/searchFilterCalendar" />

    <EditText
        android:id="@+id/spinnerEditTextMinutes"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/zerozero"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerColon"
        app:layout_constraintTop_toBottomOf="@+id/searchFilterCalendar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>